syntax = "proto3";

package core.report;
option go_package = "github.com/CyberAgent/mimosa-core/proto/report";

// Report
message ReportFinding {
  uint32 report_finding_id = 1;
  string report_date = 2;
  uint32 project_id = 3;
  string project_name = 4;
  string category = 5;
  string data_source = 6;
  float score = 7;
  uint32 count = 8;
}
